# lightspeed

./: .install_deps.sh  .travis.yml  CMakeLists.txt  LightSpeed.kdev4  README.md  main.cpp
include/: configparser.h  enviroment.h  file.h  fileloader.h  globals.h  help.h  inputhandling.h  optionswitch.h
lightspeed/core/: globals.h  main.cpp
lightspeed/core/include/: cmakegenerator.h  codegrab.h  configparser.h  enviroment.h  errormanager.h  file.h  fileloader.h  help.h  inputhandling.h  network.h  optionswitch.h
lightspeed/core/src/compilation/: cmakegenerator.cpp
lightspeed/core/src/network/: httpconnection.cpp
lightspeed/core/src/parsing/: configparser.cpp
lightspeed/core/src/utils/: codegrab.cpp  enviroment.cpp  errormanager.cpp  file.cpp  fileloader.cpp  globals.cpp  help.cpp  inputhandling.cpp  netutils.cpp  optionswitch.cpp
lightspeed/core/src/utils/core/: enviroment.cpp  errormanager.cpp  globals.cpp  help.cpp  inputhandling.cpp  optionswitch.cpp
lightspeed/core/src/utils/file/: codegrab.cpp  file.cpp  fileloader.cpp
lightspeed/core/src/utils/helpers/: netutils.cpp
lightspeed/tests/: lsincludebundle.h  main.cpp
src/: globals.cpp  help.cpp
